--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <main>
       <!--Герой-->
       <section class="hero">
-        <div>
+        <div class="hero-container">
           <h1 class="hero-title">
             Эффективные решения <br />
             для вашего бизнеса
@@ -66,7 +66,7 @@
       <!--Преимущества-->
       <section class="section one">
         <div class="container">
-          <h2 class="section-title">Компания гарантирует</h2>
+          <h2 class="section-title visually-hidden">Компания гарантирует</h2>
           <ul class="feature-list list">
             <li class="element">
               <img src="./images/antenna.svg" alt="антена" />
